deploy2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy2
  labels:
    app: app-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-v2  
  template:
    metadata:
      labels:
        app: app-v2
    spec:
     containers:
     - name: sample-ctr
       image: devopstrainer/deploy:v2
       ports:
       - containerPort: 80
