svc1.yml
apiVersion: v1
kind: Service
metadata:
  name: svc1
  labels:
    app: app-v1
spec:
  ports:
  - port: 80
    targetPort: 32001
    protocol: TCP
  selector:    
    app: app-v1
  type: ClusterIP
