svc2.yml
apiVersion: v1
kind: Service
metadata:
  name: svc2
  labels:
    app: app-v2
spec:
  ports:
  - port: 80
    targetPort: 32002
    protocol: TCP
  selector:    
    app: app-v2
  type: ClusterIP
